tdf#123653 pass WM messages to the parent window.

Use cbWndExtra so that MediaPlayerWndProc can get the Window
pointer.

Do not handle mouse event WM messages in MediaPlayerWndProc and
pass them to parent window because Slideshow handles the message
themselvs.

Change-Id: Ie790e06eb3813bc3b63f78f25cf6e1640c58dee2
Reviewed-on: https://gerrit.libreoffice.org/68242
Tested-by: Jenkins
Reviewed-by: Mark Hung <marklh9@gmail.com>